<resources>
    <string name="app_name">MyFitness</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_main_screen">Главная</string>
    <string name="title_search">Поиск</string>
    <string name="title_time_table">График</string>
    <string name="title_timer">Таймер</string>
    <string name="title_profile">Профиль</string>
</resources>