<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selector"
        android:title="@string/title_main_screen" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_selector"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_time_table"
        android:icon="@drawable/time_table_selector"
        android:title="@string/title_time_table" />

    <item
        android:id="@+id/navigation_timer"
        android:icon="@drawable/timer_selector"
        android:title="@string/title_timer" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_selector"
        android:title="@string/title_profile" />
</menu>